@@ -1,37 +1,87 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
-from trytond.i18n import gettext
-from trytond.model import fields
-from trytond.pool import PoolMeta
+from sql import Literal, Null
+from sql.operators import Concat
 
-from . import luhn
-from .exceptions import SIRETValidationError
+from trytond.model import fields
+from trytond.pool import Pool, PoolMeta
+from trytond.transaction import Transaction
 
 
 class Address(metaclass=PoolMeta):
     __name__ = 'party.address'
 
-    siret_nic = fields.Char("SIRET NIC", select=True, size=5)
-    siret = fields.Function(fields.Char('SIRET'), 'get_siret')
-
-    def get_siret(self, name):
-        if self.party.siren and self.siret_nic:
-            return self.party.siren + self.siret_nic
+    siret = fields.Function(fields.Many2One(
+            'party.identifier', "SIRET"),
+        'get_siret', searcher='search_siret')
 
     @classmethod
-    def validate(cls, addresses):
-        super(Address, cls).validate(addresses)
-        for address in addresses:
-            address.check_siret()
+    def __register__(cls, module):
+        pool = Pool()
+        Party = pool.get('party.party')
+        Identifier = pool.get('party.identifier')
+        cursor = Transaction().connection.cursor()
+        party = Party.__table__()
+        address = cls.__table__()
+        identifier = Identifier.__table__()
 
-    def check_siret(self):
-        '''
-        Check validity of SIRET
-        '''
-        if self.siret:
-            if (len(self.siret) != 14
-                    or not luhn.validate(self.siret)):
-                raise SIRETValidationError(
-                    gettext('party_siret.msg_invalid_siret',
-                        number=self.siret,
-                        address=self.rec_name))
+        super().__register__(module)
+
+        table_h = cls.__table_handler__(module)
+        party_h = Party.__table_handler__(module)
+
+        # Migrate from 6.2: replace siren and siret by identifier
+        if party_h.column_exist('siren'):
+            cursor.execute(*identifier.insert(
+                    [identifier.party,
+                        identifier.type, identifier.code,
+                        identifier.active],
+                    party.select(
+                        party.id, Literal('fr_siren'),
+                        party.siren, party.active,
+                        where=(party.siren != Null)
+                        & (party.siren != ''))))
+            if table_h.column_exist('siret_nic'):
+                cursor.execute(*identifier.insert(
+                        [identifier.party, identifier.address,
+                            identifier.type, identifier.code,
+                            identifier.active],
+                        address.join(
+                            party, condition=address.party == party.id
+                            ).select(
+                            address.party, address.id,
+                            Literal('fr_siret'),
+                            Concat(party.siren, address.siret_nic),
+                            address.active,
+                            where=(address.siret_nic != Null)
+                            & (address.siret_nic != '')
+                            & (party.siren != Null)
+                            & (party.siren != ''))))
+                table_h.drop_column('siret_nic')
+            party_h.drop_column('siren')
+
+    def get_siret(self, name):
+        for identifier in self.identifiers:
+            if identifier.type == 'fr_siret':
+                return identifier.id
+
+    @classmethod
+    def search_siret(cls, name, clause):
+        _, operator, value = clause
+        domain = [
+            ('identifiers', 'where', [
+                    ('code', operator, value),
+                    ('type', 'in', 'fr_siren'),
+                    ]),
+            ]
+        # Add party without tax identifier
+        if ((operator == '=' and value is None)
+                or (operator == 'in' and None in value)):
+            domain = ['OR',
+                domain, [
+                    ('identifiers', 'not where', [
+                            ('type', '=', 'fr_siren'),
+                            ]),
+                    ],
+                ]
+        return domain
