@@ -8,10 +8,5 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="party.address_view_tree"/>
             <field name="name">address_tree</field>
         </record>
-        <record model="ir.ui.view" id="address_view_form">
-            <field name="model">party.address</field>
-            <field name="inherit" ref="party.address_view_form"/>
-            <field name="name">address_form</field>
-        </record>
     </data>
 </tryton>
