@@ -1,12 +1,0 @@
-# This file is part of Tryton.  The COPYRIGHT file at the top level of
-# this repository contains the full copyright notices and license terms.
-
-from trytond.model.exceptions import ValidationError
-
-
-class SIRENValidationError(ValidationError):
-    pass
-
-
-class SIRETValidationError(SIRENValidationError):
-    pass
