@@ -8,10 +8,5 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="party.party_view_tree"/>
             <field name="name">party_tree</field>
         </record>
-        <record model="ir.ui.view" id="party_view_form">
-            <field name="model">party.party</field>
-            <field name="inherit" ref="party.party_view_form"/>
-            <field name="name">party_form</field>
-        </record>
     </data>
 </tryton>
