@@ -6,4 +6,3 @@ depends:
 xml:
     party.xml
     address.xml
-    message.xml
