@@ -1,13 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="/form/field[@name='name']" position="after">
-        <group id="siret" colspan="2" col="-1">
-            <label name="siret_nic"/>
-            <field name="siret_nic"/>
-            <label name="siret"/>
-            <field name="siret"/>
-        </group>
-    </xpath>
-</data>
