@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="//page[@name='identifiers']/field[@name='identifiers']" position="before">
-        <label name="siren"/>
-        <field name="siren"/>
-        <newline/>
-    </xpath>
-</data>
