@@ -1,3 +1,4 @@
+* Use party identifier to store SIREN and SIRET
 * Add support for Python 3.10
 * Remove support for Python 3.6
 
